# mini-http-server

./: 404.html  Cargo.toml  index.html  note.md
src/: main.rs
src/handler/: mod.rs
