[package]
name = "mini-http-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
env_logger = "0.9.0"
log = "0.4.14"
lazy_static = "1.4.0"
async-lock = "2.4.0"
